--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = mlsb-movement-recorder
 	url = git@github.com:Jblew/mlsb-movement-recorder.git
 [submodule "iot-timeseries-label-react-ui"]
-	path = iot-timeseries-label-react-ui
+	path = react-ui
 	url = git@github.com:Jblew/iot-timeseries-label-react-ui.git
