--- a/.gitmodules
+++ b/.gitmodules
@@ -5,5 +5,8 @@
 	path = react-ui
 	url = git@github.com:Jblew/iot-timeseries-label-react-ui.git
 [submodule "iot-timeseries-label-core"]
-	path = iot-timeseries-label-core
+	path = core
 	url = git@github.com:Jblew/iot-timeseries-label-core.git
+[submodule "iot-timeseries-label-serverless"]
+	path = iot-timeseries-label-serverless
+	url = git@github.com:Jblew/iot-timeseries-label-serverless.git
