Mv iot-timeseries-label-website -> website

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,6 +15,6 @@
 	url = git@github.com:Jblew/iot-timeseries-label-serverless.git
 	branch = master
 [submodule "iot-timeseries-label-website"]
-	path = iot-timeseries-label-website
+	path = website
 	url = git@github.com:Jblew/iot-timeseries-label-website.git
 	branch = master
